--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://alasser0s.github.io/cart-react",
+  "homepage": "https://alasser0s.github.io/my-ecommerce",
   "name": "my-ecommerce",
   "version": "0.1.0",
   "private": true,
